# advent-of-code-2024

./: .envrc  .gitignore  .pylintrc  Makefile  README.md  leaderboard.py  pyproject.toml  requirements.txt  util.py
.github/workflows/: checks.yml  pylint.yml
aoc/: __main__.py  util.py
aoc/day_01/: __init__.py
aoc/day_02/: __init__.py
aoc/day_03/: __init__.py
aoc/template/: __init__.py  main.py
day_01/: main.py
template/: main.py
