[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc"
version = "0.0.0"
description = "Advent of Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black ~= 23.11",
    "mypy ~= 1.7",
    "pylint ~= 3.0",
    "pandas ~= 2.1",
    "requests ~= 2.31",
    "tqdm ~= 4.66",
    "typer ~= 0.15.1",
]

[project.urls]
"Homepage" = "https://github.com/wilsonconley/advent_of_code_2024/"

[project.scripts]
aoc = "aoc.__main__:app"
